# airflow-vibe

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
dags/: __init__.py  csv_to_duckdb.py
docker/: Containerfile  README.md  docker-compose.yml  nginx.conf
tests/: test_csv_to_duckdb.py
